show error code if excel limit is exceeded

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -154,7 +154,7 @@
     "footer.privacyStatement": "Datenschutzerklärung",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/de/home/dokumentation/covid-certificate-app.html",
     "gracePeriodMessage": "Dieses Schnelltest-Produkt kann bis {{validUntil}} verwendet werden, nach diesem Datum ist es nicht mehr möglich, Zertifikate mit diesem Produkt zu erstellen.",
-    "home.administration": "Anleitungen zur Benutzerverwaltung (delegiertes Management) durch Superuser",
+    "home.administration": "Anleitungen und Informationen zur Benutzerverwaltung",
     "home.faq": "Häufig gestellte Fragen (FAQ)",
     "home.faq.url": "https://www.bag.admin.ch/bag/de/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#-40000965",
     "home.instructions": "Sie befinden sich auf der Internetseite zum Erstellen von Covid Zertifikaten.",
@@ -230,6 +230,7 @@
     "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen",
     "reports.a4a6.surName": "Nachname",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.tooManyUsers": "Es dürfen maximal {{requiredLength}} Benutzer ausgewählt werden, Sie haben {{actualLength}} ausgewählt",
     "reports.a4a6.unit": "Einheit",
     "reports.a5.description.long": "<strong>Wie viele Zertifikate welchen Typs haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
@@ -280,9 +281,11 @@
     "reports.dateFromTo.date-from": "Anfangsdatum",
     "reports.dateFromTo.date-to": "Enddatum",
     "reports.dateFromTo.dateTooSmall": "Das Datum muss nach dem 30.04.2021 liegen",
+    "reports.dateFromTo.maxPeriodDays": "Zeitraum darf maximal {{maxPeriodDays}} Tage sein",
     "reports.dateFromTo.startDateBeforeEndDate": "Anfangsdatum darf nicht nach dem Enddatum liegen",
     "reports.dateFromTo.text": "Bitte wählen Sie ein Anfangs- und ein Enddatum des Ausstellungszeitraums für den Report aus:",
     "reports.detail.header": "Sie möchten einen konkreten Verdachtsfall belegen oder widerlegen, indem Sie die einzelnen Aktionen einer Ausstellerin/eines Ausstellers analysieren? Erstellen Sie dazu einen Detailreport.",
+    "reports.excelLimitExceeded": "Das Limit der Excel-Tabelle wurde überschritten. Bitte schränken Sie Ihre suche mehr ein.",
     "reports.generate": "Report generieren",
     "reports.generate.new": "Neuen Report generieren",
     "reports.generation.info": "Ihre Abfrage wird ausgeführt und der Report erstellt. Bei grossen Datenmengen, kann dies mehrere Minuten in Anspruch nehmen. Wir bitten Sie um etwas Geduld. Achtung: Bitte schliessen Sie dieses Fenster während dieser Zeit nicht und machen Sie keinen Reload, da das Erstellen des Reports dadurch abgebrochen wird.",
