--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,7 +154,7 @@
     "footer.privacyStatement": "Privacy statement",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/en/home/documentation/covid-certificate-app.html",
     "gracePeriodMessage": "This rapid test product can be used until {{validUntil}}; after that date, it can no longer be used to generate certificates.",
-    "home.administration": "Instructions for user administration (delegated management) by superuser",
+    "home.administration": "Instructions and informations on user management",
     "home.faq": "FAQ",
     "home.faq.url": "https://www.bag.admin.ch/bag/de/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#-40000965",
     "home.instructions": "You are on the website for generating COVID certificates.",
@@ -196,7 +196,7 @@
     "otp.title": "Generate new One-Time-Password",
     "paginator.nextPage": "Next page",
     "paginator.previousPage": "Previous page",
-    "paginator.range": "Pagen {{page}} of {{amountPages}}",
+    "paginator.range": "Page {{page}} of {{amountPages}}",
     "report.link": "Report",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
@@ -230,6 +230,7 @@
     "reports.a4a6.selectedUser": "Users added",
     "reports.a4a6.surName": "Last name",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.tooManyUsers": "A maximum of {{requiredLength}} users may be selected, you have selected {{actualLength}}",
     "reports.a4a6.unit": "Unit",
     "reports.a5.description.long": "<strong>How many certificates of what type did individual issuers in a unit issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.",
     "reports.a5.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
@@ -280,9 +281,11 @@
     "reports.dateFromTo.date-from": "Start date",
     "reports.dateFromTo.date-to": "End date",
     "reports.dateFromTo.dateTooSmall": "The date must be after 30.04.2021",
+    "reports.dateFromTo.maxPeriodDays": "Period must not exceed {{maxPeriodDays}} days",
     "reports.dateFromTo.startDateBeforeEndDate": "Start date must not be after the end date",
     "reports.dateFromTo.text": "Please select a start and end date for the issue period for the report:",
     "reports.detail.header": "Want to prove or refute a concrete case of suspicion by analysing the individual actions of an issuer? Then create an detailed report.",
+    "reports.excelLimitExceeded": "The limit of the Excel table has been exceeded. Please limit your search more.",
     "reports.generate": "Generate report",
     "reports.generate.new": "Generate new report",
     "reports.generation.info": "Your query is being processed and the report created. If there are large volumes of data involved this can take several minutes. We ask you to be patient.\nImportant: Please do not close this window while the report is being created and do not reload, as this will cancel the creation of the report.",
