--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -154,7 +154,7 @@
     "footer.privacyStatement": "Politique de confidentialité",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/fr/home/documentation/covid-certificate-app.html",
     "gracePeriodMessage": "Ce matériel de test rapide peut être utilisé jusqu’au {{validUntil}}; après cette date, il ne permettra plus d’établir des certificats.",
-    "home.administration": "Instructions pour l'administration des utilisateurs (gestion déléguée) par le superutilisateur",
+    "home.administration": "Instructions et informations sur la gestion des utilisateurs",
     "home.faq": "Questions fréquemment posées",
     "home.faq.url": "https://www.bag.admin.ch/bag/fr/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#93945287",
     "home.instructions": "Vous vous trouvez sur la page Internet permettant d'établir des certificats COVID.",
@@ -230,6 +230,7 @@
     "reports.a4a6.selectedUser": "Utilisateurs ajoutés",
     "reports.a4a6.surName": "Nom",
     "reports.a4a6.title": "A4 / A6",
+    "reports.a4a6.tooManyUsers": "Vous pouvez sélectionner {{requiredLength}} utilisateurs au maximum, vous en avez sélectionné {{actualLength}}",
     "reports.a4a6.unit": "Unité organisationnelle",
     "reports.a5.description.long": "<strong>Combien de certificats de quel type les différents émetteurs d’une unité ont-ils délivrés, et par quels canaux, au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a5.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
@@ -280,9 +281,11 @@
     "reports.dateFromTo.date-from": "Date de début",
     "reports.dateFromTo.date-to": "Date de fin",
     "reports.dateFromTo.dateTooSmall": "La date doit être située après le 30.04.2021",
+    "reports.dateFromTo.maxPeriodDays": "La période ne peut pas dépasser {{maxPeriodDays}} jours",
     "reports.dateFromTo.startDateBeforeEndDate": "La date de début ne doit pas être postérieure à la date de fin",
     "reports.dateFromTo.text": "Veuillez sélectionner une date de début et une date de fin de la période d’émission pour le rapport:",
     "reports.detail.header": "Vous souhaitez confirmer ou infirmer un soupçon concret en analysant les activités d’un émetteur précis ? Rédigez un rapport de détail.",
+    "reports.excelLimitExceeded": "La limite de la feuille de calcul Excel a été dépassée. Veuillez restreindre davantage votre recherche.",
     "reports.generate": "Générer le rapport",
     "reports.generate.new": "Générer un nouveau rapport",
     "reports.generation.info": "Votre requête est en cours d’exécution et le rapport est généré. Si la quantité de données est importante, cela peut prendre plusieurs minutes. Nous vous prions de faire preuve de patience. Attention : veuillez ne pas fermer cette fenêtre pendant le processus de création et ne pas faire de nouveau téléchargement, car cela interromprait la création du rapport.",
