--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -230,7 +230,7 @@
     "reports.a4a6.selectedUser": "Hinzugefügte Benutzer/innen",
     "reports.a4a6.surName": "Nachname",
     "reports.a4a6.title": "A4 / A6",
-    "reports.a4a6.tooManyUsers": "Es dürfen maximal {{requiredLength}} Benutzer ausgewählt werden, Sie haben {{actualLength}} ausgewählt",
+    "reports.a4a6.tooManyUsers": "Bitte reduzieren Sie die Auswahl auf maximal 200 Aussteller/Ausstellerinnen",
     "reports.a4a6.unit": "Einheit",
     "reports.a5.description.long": "<strong>Wie viele Zertifikate welchen Typs haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
@@ -281,7 +281,7 @@
     "reports.dateFromTo.date-from": "Anfangsdatum",
     "reports.dateFromTo.date-to": "Enddatum",
     "reports.dateFromTo.dateTooSmall": "Das Datum muss nach dem 30.04.2021 liegen",
-    "reports.dateFromTo.maxPeriodDays": "Zeitraum darf maximal {{maxPeriodDays}} Tage sein",
+    "reports.dateFromTo.maxPeriodDays": "Bitte reduzieren Sie den Ausstellungszeitraum auf maximal {{maxPeriodDays}} Tage",
     "reports.dateFromTo.startDateBeforeEndDate": "Anfangsdatum darf nicht nach dem Enddatum liegen",
     "reports.dateFromTo.text": "Bitte wählen Sie ein Anfangs- und ein Enddatum des Ausstellungszeitraums für den Report aus:",
     "reports.detail.header": "Sie möchten einen konkreten Verdachtsfall belegen oder widerlegen, indem Sie die einzelnen Aktionen einer Ausstellerin/eines Ausstellers analysieren? Erstellen Sie dazu einen Detailreport.",
