--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -230,7 +230,7 @@
     "reports.a4a6.selectedUser": "Utenti aggiunti",
     "reports.a4a6.surName": "Cognome",
     "reports.a4a6.title": "A4 / A6",
-    "reports.a4a6.tooManyUsers": "È possibile selezionare un massimo di {{requiredLength}} utenti, voi ne avete selezionati {{actualLength}}",
+    "reports.a4a6.tooManyUsers": "Si prega di limitare la selezione a non più di 200 emittenti",
     "reports.a4a6.unit": "Unità",
     "reports.a5.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione.",
     "reports.a5.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
@@ -281,7 +281,7 @@
     "reports.dateFromTo.date-from": "Data di inizio",
     "reports.dateFromTo.date-to": "Data di fine",
     "reports.dateFromTo.dateTooSmall": "La data deve essere successiva al 30.04.2021",
-    "reports.dateFromTo.maxPeriodDays": "Il periodo può essere al massimo di {{maxPeriodDays}} giorni",
+    "reports.dateFromTo.maxPeriodDays": "Si prega di limitare il periodo di emissione a non più di {{maxPeriodDays}} giorni",
     "reports.dateFromTo.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
     "reports.dateFromTo.text": "Selezionare una data di inizio e una data di fine del periodo di emissione per il rapporto:",
     "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
