fixed wrong translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,7 +154,7 @@
     "footer.privacyStatement": "Privacy statement",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/en/home/documentation/covid-certificate-app.html",
     "gracePeriodMessage": "This rapid test product can be used until {{validUntil}}; after that date, it can no longer be used to generate certificates.",
-    "home.administration": "Instructions and informations on user management",
+    "home.administration": "Instructions and information on user management",
     "home.faq": "FAQ",
     "home.faq.url": "https://www.bag.admin.ch/bag/de/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#-40000965",
     "home.instructions": "You are on the website for generating COVID certificates.",
