--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -301,6 +301,9 @@
     "reports.param-help.title": "Hilfestellung Parameter",
     "reports.reset-input": "Eingabe zurücksetzen",
     "reports.statistic.header": "Sie möchten einen allgemeinen Überblick über die Zertifikatsausstellung in der Schweiz in Form einer statistischen Auswertung erhalten? Erstellen Sie dazu einen Statistikreport.",
+    "reports.transferCodes.format": "Format: xxxxxxxxx",
+    "reports.transferCodes.format.error": "Der Transfercode muss im Format xxxxxxxxx sein.",
+    "reports.transferCodes.info": "Bitte geben Sie den Transfercode des Zertifikats ein.</br>Falls Sie mehrere Transfercodes gleichzeitig überprüfen lassen möchten, können Sie diese mit Leerschlag, Enter oder Komma trennen.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "Die UVCI muss im Format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx sein.",
     "reports.uvci.info": "Bitte geben Sie die UVCI des Zertifikats ein.</br>Falls Sie mehrere UVCI gleichzeitig überprüfen lassen möchten, können Sie diese mit Leerschlag, Enter oder Komma trennen.",
@@ -324,7 +327,7 @@
     "validation.error.http.458": "Ungültiger Vorname! Darf nicht mehr als 80 Zeichen und/oder keine ungültigen Zeichen enthalten.",
     "validation.error.http.459": "Ungültiger Familienname! Darf nicht mehr als 80 Zeichen und/oder keine ungültigen Zeichen enthalten.",
     "validation.error.http.470": "Ungültiges UVCI-Format",
-    "validation.error.http.480": "UVCI wurde bereits gesperrt",
+    "validation.error.http.480": "UVCI wurde bereits gesperrt: {{date}}",
     "validation.error.http.482": "Das CSV konnte nicht verarbeitet werden aufgrund einer ungültigen Grösse. Es müssen 1 bis 100 Einträge enthalten sein.",
     "validation.error.http.485": "Eine oder mehrere der Anfragen in der CSV enthalten ungültige Daten. Für detailliertere Fehlermeldungen prüfen Sie die zurückgegebene CSV Datei.",
     "validation.error.http.489": "Ungültiges Geburtsdatum. Bitte überprüfen Sie Ihre Eingabe in Schritt zwei.",
