--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -301,6 +301,9 @@
     "reports.param-help.title": "Help with parameters",
     "reports.reset-input": "Reset entry",
     "reports.statistic.header": "Want a statistical analysis giving you a general overview of the issue of certificates in Switzerland? Then create a statistical report.",
+    "reports.transferCodes.format": "Format: xxxxxxxxx",
+    "reports.transferCodes.format.error": "The transfer code must be in the following format: xxxxxxxxx",
+    "reports.transferCodes.info": "Please enter the certificate’s transfer code.</br>If you want to have multiple transfer codes verified simultaneously, you can separate them with a space, the enter key or a comma.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "The UVCI must be in the following format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
     "reports.uvci.info": "Please enter the certificate’s UVCI. If you want to have multiple UVCIs verified simultaneously, you can separate them with a space, the enter key or a comma.",
@@ -324,7 +327,7 @@
     "validation.error.http.458": "Invalid given name! Must not exceed 80 chars and/or not contain any invalid characters.",
     "validation.error.http.459": "Invalid family name! Must not exceed 80 chars and/or not contain any invalid characters.",
     "validation.error.http.470": "Invalid UVCI format",
-    "validation.error.http.480": "UVCI already revoked",
+    "validation.error.http.480": "UVCI already revoked: {{date}}",
     "validation.error.http.482": "The CSV was not processed due to an invalid size. It must contain 1 to 100 entries.",
     "validation.error.http.485": "One or more of the requests in the CSV contain invalid data. For more detailed error messages check the returned CSV file.",
     "validation.error.http.489": "Invalid date of birth. Please check your input in step two.",
