--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -301,6 +301,9 @@
     "reports.param-help.title": "Aide sur les paramètres",
     "reports.reset-input": "Rétablir la saisie",
     "reports.statistic.header": "Vous souhaitez obtenir un aperçu global des certificats émis en Suisse sous forme d’une évaluation statistique ? Rédigez un rapport statistique.",
+    "reports.transferCodes.format": "Format: xxxxxxxxx",
+    "reports.transferCodes.format.error": "Le code de transfert doit être rédigé au format xxxxxxxxx",
+    "reports.transferCodes.info": "Veuillez indiquer le code de transfert du certificat.</br>Si vous souhaitez faire vérifier plusieurs codes de transfert à la fois, séparez-les avec une espace, un retour à la ligne (touche Enter) ou une virgule.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "L’UVCI doit être rédigé au format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
     "reports.uvci.info": "Veuillez indiquer l’UVCI du certificat.\nSi vous souhaitez faire vérifier plusieurs UVCI à la fois, séparez-les avec une espace, un retour à la ligne (touche Enter) ou une virgule.",
@@ -324,7 +327,7 @@
     "validation.error.http.458": "Prénom invalide! Ne pas dépasser 80 signes ni saisir des caractères non valides.",
     "validation.error.http.459": "Nom de famille invalide! Ne pas dépasser 80 signes ni saisir des caractères non valides.",
     "validation.error.http.470": "Format de l'UVCI invalide",
-    "validation.error.http.480": "UVCI déjà verrouillé",
+    "validation.error.http.480": "UVCI déjà verrouillé: {{date}}",
     "validation.error.http.482": "Le CSV n'a pas été traité en raison d'une taille non valide. Il doit contenir de 1 à 100 entrées.",
     "validation.error.http.485": "Une ou plusieurs des requêtes du CSV contiennent des données non valides. Pour des messages d'erreur plus détaillés, vérifiez le fichier CSV retourné.",
     "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2.",
