--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -301,6 +301,9 @@
     "reports.param-help.title": "Aiuto sui parametri",
     "reports.reset-input": "Annulla l’immissione",
     "reports.statistic.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
+    "reports.transferCodes.format": "Formato: xxxxxxxxx",
+    "reports.transferCodes.format.error": "Il codice di trasferimento deve essere immesso nel formato xxxxxxxxx",
+    "reports.transferCodes.info": "Si prega di immettere il codice di trasferimento del certificato.</br>Per far verificare più codici di trasferimento insieme, separarli con uno spazio, un ritorno a capo (tasto Enter) o una virgola.",
     "reports.uvci.format": "Formato: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "L’UVCI deve essere immesso nel formato urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
     "reports.uvci.info": "Si prega di immettere l’UVCI del certificato.\nPer far verificare più UVCI insieme, separarli con uno spazio, un ritorno a capo (tasto Enter) o una virgola.",
@@ -324,7 +327,7 @@
     "validation.error.http.458": "Il nome non è valido! Il nome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.459": "Il cognome non è valido!! Il cognome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.470": "Formato UVCI non valido",
-    "validation.error.http.480": "UVCI già bloccato",
+    "validation.error.http.480": "UVCI già bloccato: {{date}}",
     "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
     "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
     "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
