--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -328,6 +328,7 @@
     "validation.error.http.458": "Il nome non è valido! Il nome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.459": "Il cognome non è valido!! Il cognome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.470": "Formato UVCI non valido",
+    "validation.error.http.480": "UVCI già bloccato: {{date}}",
     "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
     "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
     "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
