--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -83,6 +83,7 @@
     "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">Die Ausstellung f&uuml;r Impfstoffe die nur gem. &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; zugelassen sind ist nur f&uuml;r Personen mit einem g&uuml;ltigen Aufenthaltstitel oder Schweizer B&uuml;rgerInnen. Diese Covid-Impfzertifikate sind zudem nur innerhalb der Schweiz g&uuml;ltig.</p>",
     "certificateCreate.step-two.personaldata.information": "Die Personalien müssen mit dem Ausweisdokument identisch sein.",
     "certificateCreate.step-two.vaccinationinformation": "<p>Die Angaben zu den erhaltenen (X) und erforderlichen (Y) Impfdosen m&uuml;ssen einer der folgenden Regeln entsprechend eingegeben werden:</p> <ul> <li>Letzte Dosis eines 2-Dosen-Impfstoffs (z. B. mRNA) ohne vorg&auml;ngige Infektion:</li> <ul> <li>1/2: Unvollst&auml;ndige Impfung (nicht verwendbar f&uuml;r Reisen oder zertifikatspflichtige Bereiche)</li> <li>2/2: Vollst&auml;ndige Impfung (grundimmunisiert)</li> <li>3/3, 4/4, ...: Auffrischimpfung (\"Booster\")</li> </ul> </ul> <ul> <li>Letzte Dosis eines 2-Dosen-Impfstoffs (z. B. mRNA) nach vorg&auml;ngiger Infektion (\"erforderliche Dosen\": Y muss immer 1 sein): <ul> <li>1/1: Vollst&auml;ndige Impfung nach Genesung</li> <li>2/1, 3/1, 4/1, ...: Auffrischimpfung (\"Booster\") nach Genesung</li> </ul> </li> </ul> <ul> <li>Letzte Dosis eines 1-Dosen-Impfstoffs (z. B. Janssen) ohne vorg&auml;ngige Infektion: <ul> <li>1/1: Vollst&auml;ndige Impfung</li> <li>2/1: Auffrischimpfung (\"Booster\")</li> </ul> </li> </ul>",
+    "certificateRevoke.alreadyRevoked": "UVCI wurde bereits gesperrt: {{date}}",
     "certificateRevoke.button": "Zertifikat sperren",
     "certificateRevoke.fraudFlag": "Unzulässige Ausstellung (z. B. aufgrund vorsätzlich falscher Angaben oder missbräuchlicher Ausstellung)",
     "certificateRevoke.instructions": "Hier können Sie erstellte Zertifikate sperren. Diese erscheinen anschliessend auf einer Sperrliste.",
@@ -301,6 +302,9 @@
     "reports.param-help.title": "Hilfestellung Parameter",
     "reports.reset-input": "Eingabe zurücksetzen",
     "reports.statistic.header": "Sie möchten einen allgemeinen Überblick über die Zertifikatsausstellung in der Schweiz in Form einer statistischen Auswertung erhalten? Erstellen Sie dazu einen Statistikreport.",
+    "reports.transferCodes.format": "Format: xxxxxxxxx",
+    "reports.transferCodes.format.error": "Der Transfercode muss im Format xxxxxxxxx sein.",
+    "reports.transferCodes.info": "Bitte geben Sie den Transfercode des Zertifikats ein.</br>Falls Sie mehrere Transfercodes gleichzeitig überprüfen lassen möchten, können Sie diese mit Leerschlag, Enter oder Komma trennen.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "Die UVCI muss im Format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx sein.",
     "reports.uvci.info": "Bitte geben Sie die UVCI des Zertifikats ein.</br>Falls Sie mehrere UVCI gleichzeitig überprüfen lassen möchten, können Sie diese mit Leerschlag, Enter oder Komma trennen.",
@@ -324,7 +328,6 @@
     "validation.error.http.458": "Ungültiger Vorname! Darf nicht mehr als 80 Zeichen und/oder keine ungültigen Zeichen enthalten.",
     "validation.error.http.459": "Ungültiger Familienname! Darf nicht mehr als 80 Zeichen und/oder keine ungültigen Zeichen enthalten.",
     "validation.error.http.470": "Ungültiges UVCI-Format",
-    "validation.error.http.480": "UVCI wurde bereits gesperrt",
     "validation.error.http.482": "Das CSV konnte nicht verarbeitet werden aufgrund einer ungültigen Grösse. Es müssen 1 bis 100 Einträge enthalten sein.",
     "validation.error.http.485": "Eine oder mehrere der Anfragen in der CSV enthalten ungültige Daten. Für detailliertere Fehlermeldungen prüfen Sie die zurückgegebene CSV Datei.",
     "validation.error.http.489": "Ungültiges Geburtsdatum. Bitte überprüfen Sie Ihre Eingabe in Schritt zwei.",
