--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,6 +83,7 @@
     "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">The issuance of vaccines that are only authorised according to the &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; is permitted only for persons with a valid residence permit or Swiss citizens. These Covid vaccination certificates are also only valid within Switzerland.</p> ",
     "certificateCreate.step-two.personaldata.information": "The personal details must be identical to the identity document.",
     "certificateCreate.step-two.vaccinationinformation": "<p>Information on the vaccine doses received (X) and required (Y) must be entered in accordance with one of the following rules:</p> <ul> <li>Last dose of a 2-dose vaccine (e.g. mRNA) without prior infection: <ul> <li>1/2: Incomplete vaccination (not usable for travel or areas subject to certification)</li> <li>2/2: Full vaccination (initial immunisation)</li> <li>3/3, 4/4, ...: Booster</li> </ul> </li> </ul> <ul> <li>Last dose of a 2-dose vaccine (e.g. mRNA) after prior infection (&ldquo;required doses&rdquo;: Y must always be 1): <ul> <li>1/1: Full vaccination after recovery</li> <li>2/1, 3/1, 4/1, ...: Booster after recovery</li> </ul> </li> </ul> <ul> <li>Last dose of a 1-dose vaccine (e.g. Janssen) without prior infection: <ul> <li>1/1: Full vaccination</li> <li>2/1: Booster</li> </ul> </li> </ul>",
+    "certificateRevoke.alreadyRevoked": "UVCI already revoked: {{date}}",
     "certificateRevoke.button": "Revoke certificate",
     "certificateRevoke.fraudFlag": "Illegitimate issuance (e.g. due to intentionally false claims or fraudulent issuance)",
     "certificateRevoke.instructions": "You can revoke generated certificates here. They will then appear on a revocation list.",
@@ -301,6 +302,9 @@
     "reports.param-help.title": "Help with parameters",
     "reports.reset-input": "Reset entry",
     "reports.statistic.header": "Want a statistical analysis giving you a general overview of the issue of certificates in Switzerland? Then create a statistical report.",
+    "reports.transferCodes.format": "Format: xxxxxxxxx",
+    "reports.transferCodes.format.error": "The transfer code must be in the following format: xxxxxxxxx",
+    "reports.transferCodes.info": "Please enter the certificate’s transfer code.</br>If you want to have multiple transfer codes verified simultaneously, you can separate them with a space, the enter key or a comma.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "The UVCI must be in the following format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
     "reports.uvci.info": "Please enter the certificate’s UVCI. If you want to have multiple UVCIs verified simultaneously, you can separate them with a space, the enter key or a comma.",
@@ -324,7 +328,6 @@
     "validation.error.http.458": "Invalid given name! Must not exceed 80 chars and/or not contain any invalid characters.",
     "validation.error.http.459": "Invalid family name! Must not exceed 80 chars and/or not contain any invalid characters.",
     "validation.error.http.470": "Invalid UVCI format",
-    "validation.error.http.480": "UVCI already revoked",
     "validation.error.http.482": "The CSV was not processed due to an invalid size. It must contain 1 to 100 entries.",
     "validation.error.http.485": "One or more of the requests in the CSV contain invalid data. For more detailed error messages check the returned CSV file.",
     "validation.error.http.489": "Invalid date of birth. Please check your input in step two.",
