--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -83,6 +83,7 @@
     "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">L'&eacute;mission des certificats pour vaccins qui figurent seulement sur la &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; ne peuvent &ecirc;tre d&eacute;livr&eacute;s qu'aux personnes disposant d'un permis de s&eacute;jour valide ou aux citoyens suisses et ces certificats de vaccination Covid ne sont valables qu'en Suisse.</p>",
     "certificateCreate.step-two.personaldata.information": "Les données personnelles doivent être identiques au document d'identité.",
     "certificateCreate.step-two.vaccinationinformation": "<p>Les donn&eacute;es sur les doses de vaccin re&ccedil;ues (X) et requises (Y) doivent &ecirc;tre saisies conform&eacute;ment &agrave; l&rsquo;une des r&egrave;gles suivantes&nbsp;:</p> <ul> <li>Derni&egrave;re dose d&rsquo;un vaccin &agrave; deux doses (p.&nbsp;ex. ARNm) sans infection ant&eacute;rieure&nbsp;: <ul> <li>1/2&nbsp;: vaccination incompl&egrave;te (ne peut pas &ecirc;tre utilis&eacute;e pour voyager ou pour les domaines n&eacute;cessitant un certificat)</li> <li>2/2&nbsp;: vaccination compl&egrave;te (immunisation de base)</li> <li>3/3, 4/4, ...&nbsp;: vaccination de rappel (<em>booster</em>)</li> </ul> </li> </ul> <ul> <li>Derni&egrave;re dose d&rsquo;un vaccin &agrave; deux doses (p. ex. ARNm) apr&egrave;s une infection ant&eacute;rieure (&laquo; doses requises &raquo;: Y doit toujours &ecirc;tre 1): <ul> <li>1/1&nbsp;vaccination compl&egrave;te apr&egrave;s gu&eacute;rison</li> <li>2/1, 3/1, 4/1, ...&nbsp;: vaccination de rappel (<em>booster</em>) apr&egrave;s gu&eacute;rison</li> </ul> </li> </ul> <ul> <li>Derni&egrave;re dose d&rsquo;un vaccin &agrave; une dose (p.&nbsp;ex. Janssen) sans infection ant&eacute;rieure&nbsp;: <ul> <li>1/1&nbsp;: vaccination compl&egrave;te</li> <li>2/1&nbsp;: vaccination de rappel (<em>booster</em>)</li> </ul> </li> </ul>",
+    "certificateRevoke.alreadyRevoked": "UVCI déjà verrouillé: {{date}}",
     "certificateRevoke.button": "Verrouiller le certificat",
     "certificateRevoke.fraudFlag": "Émission non autorisée (par exemple, en raison de fausses déclarations intentionnelles ou d'une délivrance absuive)",
     "certificateRevoke.instructions": "Vous pouvez verrouiller ici des certificats établis. Ils apparaîtront ensuite sur une liste verrouillée.",
@@ -301,6 +302,9 @@
     "reports.param-help.title": "Aide sur les paramètres",
     "reports.reset-input": "Rétablir la saisie",
     "reports.statistic.header": "Vous souhaitez obtenir un aperçu global des certificats émis en Suisse sous forme d’une évaluation statistique ? Rédigez un rapport statistique.",
+    "reports.transferCodes.format": "Format: xxxxxxxxx",
+    "reports.transferCodes.format.error": "Le code de transfert doit être rédigé au format xxxxxxxxx",
+    "reports.transferCodes.info": "Veuillez indiquer le code de transfert du certificat.</br>Si vous souhaitez faire vérifier plusieurs codes de transfert à la fois, séparez-les avec une espace, un retour à la ligne (touche Enter) ou une virgule.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "L’UVCI doit être rédigé au format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
     "reports.uvci.info": "Veuillez indiquer l’UVCI du certificat.\nSi vous souhaitez faire vérifier plusieurs UVCI à la fois, séparez-les avec une espace, un retour à la ligne (touche Enter) ou une virgule.",
@@ -324,7 +328,6 @@
     "validation.error.http.458": "Prénom invalide! Ne pas dépasser 80 signes ni saisir des caractères non valides.",
     "validation.error.http.459": "Nom de famille invalide! Ne pas dépasser 80 signes ni saisir des caractères non valides.",
     "validation.error.http.470": "Format de l'UVCI invalide",
-    "validation.error.http.480": "UVCI déjà verrouillé",
     "validation.error.http.482": "Le CSV n'a pas été traité en raison d'une taille non valide. Il doit contenir de 1 à 100 entrées.",
     "validation.error.http.485": "Une ou plusieurs des requêtes du CSV contiennent des données non valides. Pour des messages d'erreur plus détaillés, vérifiez le fichier CSV retourné.",
     "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2.",
