--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -83,6 +83,7 @@
     "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">Per i vaccini autorizzati solo conformemente all &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo;, i certificati di vaccinazione COVID-19 vengono emessi soltanto per le persone con un permesso di soggiorno valido o per i cittadini svizzeri. Questi certificati di vaccinazione sono validi solo in Svizzera.</p>",
     "certificateCreate.step-two.personaldata.information": "I dati personali devono essere identici al documento d'identità.",
     "certificateCreate.step-two.vaccinationinformation": "<p>Le indicazioni sulle dosi di vaccino ricevute (X) e necessarie (Y) devono essere immesse secondo una delle seguenti regole:</p> <ul> <li>ultima dose di un vaccino a 2 dosi (p. es. a mRNA) senza infezione pregressa: <ul> <li>1/2: vaccinazione incompleta (non utilizzabile per viaggiare o per accedere a luoghi con obbligo del certificato)</li> <li>2/2: vaccinazione completa (immunizzazione di base)</li> <li>3/3, 4/4, ...: vaccinazione di richiamo (\"booster\")</li> </ul> </li> </ul> <ul> <li>ultima dose di un vaccino a 2 dosi (p. es. a mRNA) con infezione pregressa (\"dosi necessarie\": Y deve essere sempre 1): <ul> <li>1/1: vaccinazione completa dopo una guarigione</li> <li>2/1, 3/1, 4/1, ...: vaccinazione di richiamo (\"booster\") dopo una guarigione</li> </ul> </li> </ul> <ul> <li>ultima dose di un vaccino monodose (p. es. Janssen) senza infezione pregressa: <ul> <li>1/1: vaccinazione completa</li> <li>2/1: vaccinazione di richiamo (\"booster\")</li> </ul> </li> </ul>",
+    "certificateRevoke.alreadyRevoked": "UVCI già bloccato: {{date}}",
     "certificateRevoke.button": "Blocca certificato",
     "certificateRevoke.fraudFlag": "Rilascio illegittimo (ad esempio a causa di richieste intenzionalmente false o emissione fraudolenta)",
     "certificateRevoke.instructions": "Qui è possibile bloccare i certificati emessi. Questi certificati appariranno in una apposita lista.",
@@ -301,6 +302,9 @@
     "reports.param-help.title": "Aiuto sui parametri",
     "reports.reset-input": "Annulla l’immissione",
     "reports.statistic.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
+    "reports.transferCodes.format": "Formato: xxxxxxxxx",
+    "reports.transferCodes.format.error": "Il codice di trasferimento deve essere immesso nel formato xxxxxxxxx",
+    "reports.transferCodes.info": "Si prega di immettere il codice di trasferimento del certificato.</br>Per far verificare più codici di trasferimento insieme, separarli con uno spazio, un ritorno a capo (tasto Enter) o una virgola.",
     "reports.uvci.format": "Formato: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "L’UVCI deve essere immesso nel formato urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
     "reports.uvci.info": "Si prega di immettere l’UVCI del certificato.\nPer far verificare più UVCI insieme, separarli con uno spazio, un ritorno a capo (tasto Enter) o una virgola.",
@@ -324,7 +328,6 @@
     "validation.error.http.458": "Il nome non è valido! Il nome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.459": "Il cognome non è valido!! Il cognome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.470": "Formato UVCI non valido",
-    "validation.error.http.480": "UVCI già bloccato",
     "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
     "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
     "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
