changed translations; removed link

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -155,7 +155,6 @@
     "footer.privacyStatement": "Datenschutzerklärung",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/de/home/dokumentation/covid-certificate-app.html",
     "gracePeriodMessage": "Dieses Schnelltest-Produkt kann bis {{validUntil}} verwendet werden, nach diesem Datum ist es nicht mehr möglich, Zertifikate mit diesem Produkt zu erstellen.",
-    "home.administration": "Anleitungen und Informationen zur Benutzerverwaltung",
     "home.faq": "Häufig gestellte Fragen (FAQ)",
     "home.faq.url": "https://www.bag.admin.ch/bag/de/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#-40000965",
     "home.instructions": "Sie befinden sich auf der Internetseite zum Erstellen von Covid Zertifikaten.",
@@ -165,7 +164,7 @@
     "home.login.subtitle": "Zugang für berechtigte Personen",
     "home.login.title": "Erstellen von Covid Zertifikaten",
     "home.more": "Anleitung für",
-    "home.support": "Allgemeine Supportangaben",
+    "home.support": "Informationen zur Benutzerverwaltung",
     "home.title": "Guten Tag",
     "home.training": "Anwenderschulung für Covid-Zertifikat",
     "i18n.oblique.http.error.status.403": "Sie haben keine Zugriffsberechtigung für den Dienst auf diesem Server.",
