--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -155,7 +155,6 @@
     "footer.privacyStatement": "Privacy statement",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/en/home/documentation/covid-certificate-app.html",
     "gracePeriodMessage": "This rapid test product can be used until {{validUntil}}; after that date, it can no longer be used to generate certificates.",
-    "home.administration": "Instructions and information on user management",
     "home.faq": "FAQ",
     "home.faq.url": "https://www.bag.admin.ch/bag/de/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#-40000965",
     "home.instructions": "You are on the website for generating COVID certificates.",
@@ -165,7 +164,7 @@
     "home.login.subtitle": "Access for authorised people",
     "home.login.title": "Generate COVID certificates",
     "home.more": "Instructions for",
-    "home.support": "General support information",
+    "home.support": "Information on user management",
     "home.title": "Hello",
     "home.training": "User training for COVID certificate",
     "i18n.oblique.http.error.status.403": "You don't have permission to access the service on this server.",
