--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -155,7 +155,6 @@
     "footer.privacyStatement": "Informativa sulla privacy",
     "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/it/home/documentazione/covid-certificate-app.html",
     "gracePeriodMessage": "Questo prodotto per il test antigenico rapido può essere utilizzato fino al {{validUntil}}. Dopo tale data non è più possibile generare certificati COVID con questo prodotto.",
-    "home.administration": "Istruzioni e informazioni sulla gestione degli utenti",
     "home.faq": "Domande frequenti (FAQ)",
     "home.faq.url": "https://www.bag.admin.ch/bag/it/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/faq-gesundheitsfachpersonen.html#989332307",
     "home.instructions": "Questo è il sito per creare certificati COVID.",
@@ -165,7 +164,7 @@
     "home.login.subtitle": "Accesso per le persone autorizzate",
     "home.login.title": "Creazione di certificati COVID",
     "home.more": "Istruzioni per",
-    "home.support": "Informazioni generali di supporto",
+    "home.support": "Informazioni sulla gestione degli utenti",
     "home.title": "Benvenuti",
     "home.training": "Formazione degli utenti per Certificato Covid",
     "i18n.oblique.http.error.status.403": "Non si hanno permessi necessari per accedere ai servizi sul server.",
