--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -164,7 +164,7 @@
     "home.login.subtitle": "Accès réservé aux personnes autorisées",
     "home.login.title": "Établir des certificats COVID",
     "home.more": "Instructions pour",
-    "home.support": "Informations générales sur le soutien",
+    "home.support": "Informations sur la gestion des utilisateurs",
     "home.title": "Bonjour",
     "home.training": "Formation des utilisateurs pour Certificat COVID",
     "i18n.oblique.http.error.status.403": "Vous n'avez pas la permission d'accéder au service sur ce serveur.",
