translations changed, date-from-to-fieldset's label now configurable

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -200,6 +200,7 @@
     "report.link": "Report",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
+    "reports.a11.dateFromTo.text": "Please select a start and end date for the revocation period for the report:",
     "reports.a11.description.long": "<strong>Which certificates were revoked in a certain period? </strong></br></br>This report provides you with a list of all certificates revoked in the selected canton in the defined period. Please note that the revocation period does not match the certificate issue period.",
     "reports.a11.description.short": "List of certificates revoked in a certain period.",
     "reports.a11.title": "A11",
@@ -257,8 +258,8 @@
     "reports.a7.selected-dataroom": "Canton/area selected:",
     "reports.a7.startDateBeforeEndDate": "Start date must not be after the end date",
     "reports.a7.title": "A7 / A10",
-    "reports.a8.description.long": "<strong>How many certificates of the various certificate types were issued per week (max. last 3 months) via which channels?</strong></br></br>This report provides you with a weekly list of certificate types and the number of each per issuing channel (one worksheet per week). The second to nth worksheet also shows the difference to the previous week.",
-    "reports.a8.description.short": "Weekly number of certificates of each type, broken down by issuing channel.",
+    "reports.a8.description.long": "<strong>How many certificates of the various certificate types were issued nationally per week (max. last 3 months) via which channels?</strong></br></br>This report provides you with a weekly list of certificate types and the number of each per issuing channel (one worksheet per week). The figures refer to the whole of Switzerland. It is not possible to limit the data range to individual cantons. The second to nth worksheet also shows the difference to the previous week.",
+    "reports.a8.description.short": "Weekly number of certificates of each type by issuing channel.",
     "reports.a8.title": "A8",
     "reports.a9.description.long": "<strong>How many certificates of the various certificate types have been issued so far over the entire issue period via which channels?</strong></br></br>This report provides you with the total number of certificates of one type issued and the channels by via which they were issued.",
     "reports.a9.description.short": "Total number of certificates of a type, broken down by issuing channel, in the entire issue period.",
