--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -200,6 +200,7 @@
     "report.link": "Report",
     "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
     "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
+    "reports.a11.dateFromTo.text": "Bitte wählen Sie das Anfangs- und Enddatum des Revokationszeitraums für den Report aus:",
     "reports.a11.description.long": "<strong>Welche Zertifikate sind während eines bestimmten Zeitraums revoziert worden?</strong></br></br>Dieser Report liefert Ihnen eine Liste aller revozierten Zertifikate, die während des angefragten Zeitraums im ausgewählten Kanton revoziert worden sind. Bitte beachten Sie, dass der Revokationszeitraum nicht dem Ausstellungszeitraum der Zertifikate entspricht.",
     "reports.a11.description.short": "Liste revozierter Zertifikate eines bestimmten Zeitraums.",
     "reports.a11.title": "A11",
@@ -257,7 +258,7 @@
     "reports.a7.selected-dataroom": "Ausgewählter Kanton/Bereich:",
     "reports.a7.startDateBeforeEndDate": "Anfangsdatum darf nicht nach dem Enddatum liegen",
     "reports.a7.title": "A7 / A10",
-    "reports.a8.description.long": "<strong>Wie viele Zertifikate der verschiedenen Zertifikatstypen wurden pro Woche (max. letzte 3 Monate) über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine wochenweise Liste von Zertifikatstypen und deren jeweilige Anzahl pro Ausstellkanal (je Woche ein Tabellenblatt). Das zweite bis x-te Tabellenblatt weisst dabei zusätzlich die Differenz zur Vorwoche aus.",
+    "reports.a8.description.long": "<strong>Wie viele Zertifikate der verschiedenen Zertifikatstypen wurden schweizweit pro Woche (max. letzte 3 Monate) über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine wochenweise Liste von Zertifikatstypen und deren jeweilige Anzahl pro Ausstellkanal (je Woche ein Tabellenblatt). Die Zahlen beziehen sich auf die gesamte Schweiz, eine Einschränkung des Datenraums auf einzelne Kantone ist nicht möglich. Das zweite bis x-te Tabellenblatt weisst dabei zusätzlich die Differenz zur Vorwoche aus.",
     "reports.a8.description.short": "Wochenweise Anzahl Zertifikate pro Typ, gegliedert nach Ausstellkanal.",
     "reports.a8.title": "A8",
     "reports.a9.description.long": "<strongWie viele Zertifikate der verschiedenen Zertifikatstypen wurden bisher über den gesamten Ausstellungszeitraum über welche Kanäle ausgestellt?></strong></br></br>Dieser Report liefert Ihnen die Gesamtanzahl der ausgestellten Zertifikate eines Typs und die Kanäle, über welche sie ausgestellt wurden.",
