--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -200,6 +200,7 @@
     "report.link": "Rapport",
     "reports.a10.description.long": "<strong>Quels émetteurs ont délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés.",
     "reports.a10.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
+    "reports.a11.dateFromTo.text": "Veuillez sélectionner la date de début et la date de fin de la période de révocation pour le rapport:",
     "reports.a11.description.long": "<strong>Quels certificats ont été révoqués pendant une période donnée?</strong></br></br>Ce rapport vous fournit une liste de tous les certificats révoqués pendant la période demandée dans le canton sélectionné. Veuillez noter que la période de révocation ne correspond pas à la période d’émission des certificats.",
     "reports.a11.description.short": "Liste des certificats révoqués pendant une période donnée.",
     "reports.a11.title": "A11",
@@ -257,7 +258,7 @@
     "reports.a7.selected-dataroom": "Canton/domaine sélectionné:",
     "reports.a7.startDateBeforeEndDate": "La date de début ne doit pas être postérieure à la date de fin",
     "reports.a7.title": "A7 / A10",
-    "reports.a8.description.long": "<strong>Combien de certificats des différents types ont été délivrés par semaine (max. 3 derniers mois) et par quels canaux ?</strong></br></br>Ce rapport vous fournit une liste hebdomadaire des types de certificats et de leur nombre respectif par canal d’émission (une feuille de calcul par semaine). La deuxième à la xième feuille de calcul indiquent en outre le total de la différence par rapport à la semaine précédente.",
+    "reports.a8.description.long": "<strong>Combien de certificats des différents types ont été délivrés en Suisse par semaine (max. 3 derniers mois) et par quels canaux?</strong></br></br>Ce rapport vous fournit une liste hebdomadaire des types de certificats et de leur nombre respectif par canal d’émission (une feuille de calcul par semaine). Les chiffres se rapportent à l’ensemble de la Suisse ; il n’est pas possible de limiter l’espace de données à certains cantons. La deuxième à la xième feuille de calcul indiquent en outre le total de la différence par rapport à la semaine précédente.",
     "reports.a8.description.short": "Nombre hebdomadaire de certificats par type, ventilé par canal d’émission.",
     "reports.a8.title": "A8",
     "reports.a9.description.long": "<strong>Combien de certificats des différents types ont été délivrés à ce jour, et par quels canaux, sur l’ensemble de la période d’émission ?</strong></br></br>Ce rapport vous fournit le nombre total de certificats délivrés pour un type donné et les canaux par lesquels ils ont été délivrés.",
