--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -200,6 +200,7 @@
     "report.link": "Rapporto",
     "reports.a10.description.long": "<strong>Quali emittenti hanno rilasciato un tipo specifico di certificato e quanti ne hanno rilasciati in un determinato periodo di tempo?</strong></br></br>Dopo che è stato selezionato un tipo di certificato, il rapporto fornisce un elenco, suddiviso per emittente, con il numero totale di tipi di certificati rilasciati.",
     "reports.a10.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
+    "reports.a11.dateFromTo.text": "Selezionare la data di inizio e la data di fine del periodo di revoca per il report:",
     "reports.a11.description.long": "<strong>Quali certificati sono stati revocati in un determinato periodo di tempo? </strong></br></br>Questo rapporto fornisce un elenco di tutti i certificati revocati durante il periodo in questione e nel Cantone selezionato. Si segnala che il periodo di revoca non corrisponde al periodo di emissione dei certificati.",
     "reports.a11.description.short": "Elenco dei certificati revocati in un determinato periodo di tempo.",
     "reports.a11.title": "A11",
@@ -257,7 +258,7 @@
     "reports.a7.selected-dataroom": "Cantone/settore selezionato:",
     "reports.a7.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
     "reports.a7.title": "A7 / A10",
-    "reports.a8.description.long": "<strong>Quanti certificati dei diversi tipi di certificato sono stati rilasciati ogni settimana (al massimo negli ultimi 3 mesi) e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco settimanale dei tipi di certificato rilasciati con il relativo numero per canale di emissione (un foglio di calcolo per settimana). Dal secondo all’ultimo foglio di calcolo viene inoltre mostrata la differenza totale rispetto alla settimana precedente.",
+    "reports.a8.description.long": "<strong>Quanti certificati dei diversi tipi di certificato sono stati rilasciati in tutta la Svizzera ogni settimana (al massimo negli ultimi 3 mesi) e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco settimanale dei tipi di certificato rilasciati con il relativo numero per canale di emissione (un foglio di calcolo per settimana). Le cifre si riferiscono a tutta la Svizzera; non è possibile limitare la data room a singoli Cantoni. Dal secondo all’ultimo foglio di calcolo viene inoltre mostrata la differenza totale rispetto alla settimana precedente.",
     "reports.a8.description.short": "Numero settimanale di certificati per tipo, suddivisi per canale di emissione.",
     "reports.a8.title": "A8",
     "reports.a9.description.long": "<strong>Quanti certificati dei diversi tipi sono stati rilasciati finora nell’intero periodo di emissione e attraverso quali canali?</strong></br></br>Questo rapporto fornisce il numero totale di certificati rilasciati di un tipo specifico e informa sui canali attraverso i quali sono stati rilasciati.",
