--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -205,7 +205,7 @@
     "reports.a11.description.short": "List of certificates revoked in a certain period.",
     "reports.a11.title": "A11",
     "reports.a12.description.long": "<strong>Do you need additional information on specific certificates whose transfer code is known to you?</strong></br></br>After you select the transfer codes, this report provides you with a list of all certificates matching the transfer codes. Please note that only reconstructed data are available for the period from 13 November 21 to 21 February 2022.",
-    "reports.a12.description.short": "Do you need additional information on specific certificates whose transfer code is known to you?",
+    "reports.a12.description.short": "Information on certificates that match specific transfer codes.",
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Who issued this specific certificate, when did they issue it, via what issuing channel, and what type of certificate was it?</strong></br></br>After entry of the UVCI this report provides you with information on the issuer, the time of issue, the issuing channel and the type of certificate being searched for. Information on the person for whom the certificate was issued is not available.",
     "reports.a2.description.short": "Detailed information (issuing channel, issuer, time and type of certificate) for a specific certificate UVCI. Information on the person for whom the certificate was issued is not available.",
@@ -328,7 +328,6 @@
     "validation.error.http.458": "Invalid given name! Must not exceed 80 chars and/or not contain any invalid characters.",
     "validation.error.http.459": "Invalid family name! Must not exceed 80 chars and/or not contain any invalid characters.",
     "validation.error.http.470": "Invalid UVCI format",
-    "validation.error.http.480": "UVCI already revoked: {{date}}",
     "validation.error.http.482": "The CSV was not processed due to an invalid size. It must contain 1 to 100 entries.",
     "validation.error.http.485": "One or more of the requests in the CSV contain invalid data. For more detailed error messages check the returned CSV file.",
     "validation.error.http.489": "Invalid date of birth. Please check your input in step two.",
