--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -204,8 +204,8 @@
     "reports.a11.description.long": "<strong>Quali certificati sono stati revocati in un determinato periodo di tempo? </strong></br></br>Questo rapporto fornisce un elenco di tutti i certificati revocati durante il periodo in questione e nel Cantone selezionato. Si segnala che il periodo di revoca non corrisponde al periodo di emissione dei certificati.",
     "reports.a11.description.short": "Elenco dei certificati revocati in un determinato periodo di tempo.",
     "reports.a11.title": "A11",
-    "reports.a12.description.long": "<strong>Sono necessarie ulteriori informazioni su certificati specifici di cui si conosce il codice di trasferimento?</strong></br></br>Dopo che sono stati immessi i codici di trasferimento, questo rapporto fornisce un elenco di tutti i certificati corrispondenti ai codici selezionati. Si segnala che per il periodo dal 13.11.2021 al 21.02.2022 sono disponibili solo dati ricostruiti.",
-    "reports.a12.description.short": "",
+    "reports.a12.description.long": "<strong>Sono necessarie ulteriori informazioni su certificati specifici di cui si conosce i codici di trasferimento?</strong></br></br>Dopo che sono stati immessi i codici di trasferimento, questo report fornisce i certificati corrispondenti, comprese le informazioni aggiuntive. Si segnala che per il periodo dal 13.11.2021 al 21.02.2022 sono disponibili solo dati ricostruiti.",
+    "reports.a12.description.short": "Informazioni sui certificati che corrispondono a specifici codici di trasferimento.",
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Chi ha rilasciato il certificato in questione, quando e attraverso quale canale? Di che tipo di certificato si tratta?</strong></br></br>Dopo che è stato immesso l’UVCI, questo rapporto fornisce informazioni riguardanti l’emittente, la data e il canale di emissione nonché il tipo di certificato oggetto della ricerca. Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
     "reports.a2.description.short": "Informazioni dettagliate (canale di emissione, emittente, data del rilascio e tipo di certificato) su uno specifico identificativo del certificato (UVCI). Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
@@ -328,7 +328,6 @@
     "validation.error.http.458": "Il nome non è valido! Il nome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.459": "Il cognome non è valido!! Il cognome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
     "validation.error.http.470": "Formato UVCI non valido",
-    "validation.error.http.480": "UVCI già bloccato: {{date}}",
     "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
     "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
     "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
